force-app/main/default/objects/Claim/fields/GroundObjection__c.field-meta.xml
<CustomField>
    <fullName>GroundObjection__c</fullName>
    <description>Lista de valores relacionadas al estado Objetado en una reclamación</description>
    <label>Causal de objeción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clausula de No Objeción</fullName>
            </value>
            <value>
                <fullName>Desempleo - No ajustado a la legislación laboral</fullName>
            </value>
            <value>
                <fullName>La enfermedad se encuentra excluida o no cumple con las condiciones de cobertura establecidas</fullName>
            </value>
            <value>
                <fullName>No adjunta calificación de Invalidez - No hay prueba de ocurrencia</fullName>
            </value>
            <value>
                <fullName>Objeción Reticencia Básico de Vida</fullName>
            </value>
            <value>
                <fullName>Objeción Reticencia ITP</fullName>
            </value>
            <value>
                <fullName>Terminación de contrato por mora en pago de prima</fullName>
            </value>
            <value>
                <fullName>Desempleo - contrato terminó naturalmente (se cumplió el plazo pactado)</fullName>
            </value>
            <value>
                <fullName>Desempleo - Despido por justa causa</fullName>
            </value>
            <value>
                <fullName>Desempleo - Evento antes del inicio de vigencia</fullName>
            </value>
            <value>
                <fullName>Desempleo - Mutuo acuerdo sin pago de indemnización</fullName>
            </value>
            <value>
                <fullName>Desempleo - No laboró seis meses continuos</fullName>
            </value>
            <value>
                <fullName>Desempleo - Período de prueba</fullName>
            </value>
            <value>
                <fullName>Desempleo - Prestación de servicios</fullName>
            </value>
            <value>
                <fullName>Desempleo - Amparo de ITT - Tratamiento en los 6 meses antes del ingreso ITT</fullName>
            </value>
            <value>
                <fullName>La enfermedad no corresponde a una de las cubiertas</fullName>
            </value>
            <value>
                <fullName>Los días de hospitalización o ITT son inferiores a los cubiertos en la póliza</fullName>
            </value>
            <value>
                <fullName>No existe amparo</fullName>
            </value>
            <value>
                <fullName>Por edad limite de permanencia en el amparo</fullName>
            </value>
            <value>
                <fullName>Prescripción</fullName>
            </value>
            <value>
                <fullName>Siniestro dentro de período de carencia</fullName>
            </value>
            <value>
                <fullName>Improcedencia por carencia por ITP</fullName>
            </value>
            <value>
                <fullName>La calificación es inferior al 50% en ITP, Si aporta Calificación</fullName>
            </value>
            <value>
                <fullName>La calificación es inferior al 50% en ITP, Aporta Calificación, Régimen Especial, Inf 75%</fullName>
            </value>
            <value>
                <fullName>No es asegurado</fullName>
            </value>
            <value>
                <fullName>Causa natural, no accidental</fullName>
            </value>
            <value>
                <fullName>Excedió el máximo de cuotas / días pagados</fullName>
            </value>
            <value>
                <fullName>Gastos funerarios asumidos por persona jurídica</fullName>
            </value>
            <value>
                <fullName>No incurrió en gastos médicos</fullName>
            </value>
            <value>
                <fullName>Improcedencia por cancelación de Crédito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>