force-app/main/default/objects/Claim/fields/InjuryStatus__c.field-meta.xml
<CustomField>
    <fullName>InjuryStatus__c</fullName>
    <label>Estado de la lesión</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Deformidad</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Hematoma</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Hinchazón</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Sangrado</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>Sensibilidad disminuida</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>Dificultad para respirar</label>
            </value>
            <value>
                <fullName>80</fullName>
                <label>Dolor intenso</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>Movilidad limitada</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>Inflamación</label>
            </value>
            <value>
                <fullName>110</fullName>
                <label>Incapacidad de movimiento</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>Dolor fuerte</label>
            </value>
            <value>
                <fullName>130</fullName>
                <label>Perdida de dientes</label>
            </value>
            <value>
                <fullName>140</fullName>
                <label>Confusión</label>
            </value>
            <value>
                <fullName>150</fullName>
                <label>Dolor</label>
            </value>
            <value>
                <fullName>160</fullName>
                <label>Moretones</label>
            </value>
            <value>
                <fullName>170</fullName>
                <label>Cuerpo extraño</label>
            </value>
            <value>
                <fullName>180</fullName>
                <label>Pérdida total del miembro</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>Tironazo</label>
            </value>
            <value>
                <fullName>210</fullName>
                <label>Enrojecimiento</label>
            </value>
            <value>
                <fullName>220</fullName>
                <label>Picazón</label>
            </value>
            <value>
                <fullName>230</fullName>
                <label>Ampollas</label>
            </value>
            <value>
                <fullName>240</fullName>
                <label>Perdida de conocimiento</label>
            </value>
            <value>
                <fullName>250</fullName>
                <label>No detectado</label>
            </value>
            <value>
                <fullName>260</fullName>
                <label>Dificultad para doblar o apoyar</label>
            </value>
            <value>
                <fullName>270</fullName>
                <label>Contacto con fuente conocida con VIH o sida</label>
            </value>
            <value>
                <fullName>280</fullName>
                <label>Contacto con persona diagnosticada con covid19 confirmado</label>
            </value>
            <value>
                <fullName>290</fullName>
                <label>Contacto con persona diagnosticada con covid19 sospechoso no confirmado</label>
            </value>
            <value>
                <fullName>300</fullName>
                <label>Contacto fluido corporal</label>
            </value>
            <value>
                <fullName>320</fullName>
                <label>Inhalación</label>
            </value>
            <value>
                <fullName>330</fullName>
                <label>Pinchazo elemento</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>