force-app/main/default/objects/Claim/fields/InsurancePolicyCoverage__c.field-meta.xml
<CustomField>
    <fullName>InsurancePolicyCoverage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cobertura con la cual se apertura el siniestro</description>
    <label>Insurance Policy Coverage</label>
    <referenceTo>InsurancePolicyCoverage</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>