force-app/main/default/objects/Claim/fields/IsBiologicalRisk__c.field-meta.xml
<CustomField>
    <fullName>IsBiologicalRisk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Riesgo biológico</label>
    <type>Checkbox</type>
</CustomField>