force-app/main/default/objects/Claim/fields/IsDeath__c.field-meta.xml
<CustomField>
    <fullName>IsDeath__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Muerte</label>
    <type>Checkbox</type>
</CustomField>