force-app/main/default/objects/Claim/fields/IsInsideTheCompany__c.field-meta.xml
<CustomField>
    <fullName>IsInsideTheCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dentro de la empresa</label>
    <type>Checkbox</type>
</CustomField>