force-app/main/default/objects/Claim/fields/IsLunchTime__c.field-meta.xml
<CustomField>
    <fullName>IsLunchTime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hora del almuerzo</label>
    <type>Checkbox</type>
</CustomField>