force-app/main/default/objects/Claim/fields/IsNotifications__c.field-meta.xml
<CustomField>
    <fullName>IsNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificaciones</label>
    <type>Checkbox</type>
</CustomField>