force-app/main/default/objects/Claim/fields/IsWorkAtHome__c.field-meta.xml
<CustomField>
    <fullName>IsWorkAtHome__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trabajo en casa</label>
    <type>Checkbox</type>
</CustomField>