force-app/main/default/objects/Claim/fields/JobPosition__c.field-meta.xml
<CustomField>
    <fullName>JobPosition__c</fullName>
    <label>Cargo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>