force-app/main/default/objects/Claim/fields/LastNotificationDateWaitingForDocument__c.field-meta.xml
<CustomField>
    <fullName>LastNotificationDateWaitingForDocument__c</fullName>
    <description>Campo que se crea para almacenar la ultima fecha de notificación de envió de correo en una reclamación.</description>
    <label>Fecha ultima notificación espera documen</label>
    <type>Date</type>
</CustomField>