force-app/main/default/objects/Claim/fields/Procesamiento__c.field-meta.xml
<CustomField>
    <fullName>Procesamiento__c</fullName>
    <label>Procesamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AT con AIU</fullName>
            </value>
            <value>
                <fullName>AT sin AIU</fullName>
            </value>
            <value>
                <fullName>Origen común</fullName>
            </value>
            <value>
                <fullName>Incidente(No requiere AIU)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>