force-app/main/default/objects/Claim/fields/ReasonWaitingDocument__c.field-meta.xml
<CustomField>
    <fullName>ReasonWaitingDocument__c</fullName>
    <description>Almacena motivo espera de documentos en el proceso de siniestros</description>
    <label>Motivo espera documento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>