force-app/main/default/objects/Claim/fields/ResponsibleFiling__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleFiling__c</fullName>
    <label>Responsable de la radicación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Empresa</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Trabajador</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Otro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>