force-app/main/default/objects/Claim/fields/SendClaimEmail__c.field-meta.xml
<CustomField>
    <fullName>SendClaimEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que valida el envió de correo de una reclamación.</description>
    <label>Envio Correo Reclamación</label>
    <type>Checkbox</type>
</CustomField>