force-app/main/default/objects/Claim/fields/SiteAccidentOccurrence__c.field-meta.xml
<CustomField>
    <fullName>SiteAccidentOccurrence__c</fullName>
    <label>Sitio de ocurrencia del accidente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Almacenes o depósitos</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Áreas de producción</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Áreas recreativas o deportivas</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Corredores o pasillos</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Escaleras</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Parqueaderos o áreas de circulación vehi</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Oficinas</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Otras áreas comunes</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Otro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>