force-app/main/default/objects/Claim/fields/StateRequesting__c.field-meta.xml
<CustomField>
    <fullName>StateRequesting__c</fullName>
    <formula>CASE(Status, &apos;Abierto&apos;, &apos;Análisis&apos;, &apos;Análisis&apos;, &apos;Análisis&apos;, &apos;Motor de reglas&apos;, &apos;Análisis&apos;,&apos;En Pagador&apos;, &apos;En proceso de pago &apos;,&apos;Pagado&apos;, &apos;Pagado&apos;,&apos;Pago parcial&apos;, &apos;Pago parcial&apos;,&apos;Objetado&apos;, &apos;Objetado&apos;,&apos;Suspendido&apos;, &apos;Espera Documentos&apos;,&apos;Cerrado&apos;, &apos;Cerrado&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado solicitante</label>
    <type>Text</type>
</CustomField>