force-app/main/default/objects/Claim/fields/TimeOfDay__c.field-meta.xml
<CustomField>
    <fullName>TimeOfDay__c</fullName>
    <label>Jornada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Sin definir</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Diurna</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Nocturna</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Mixto</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Turnos</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Extra</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>