force-app/main/default/objects/Claim/fields/TypeOfInjury__c.field-meta.xml
<CustomField>
    <fullName>TypeOfInjury__c</fullName>
    <label>Tipo de lesión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Fractura</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Luxacion</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Torcedura, esguince, desgarro muscular,</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Conmocion o trauma interno</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Amputacion o enucleacion</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>Herida</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>Trauma superficial</label>
            </value>
            <value>
                <fullName>55</fullName>
                <label>Golpe o contusion o aplastamiento</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>Quemadura</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>Envenenamiento o intoxicacion aguda o al</label>
            </value>
            <value>
                <fullName>80</fullName>
                <label>Efecto del tiempo, del clima u otro rela</label>
            </value>
            <value>
                <fullName>81</fullName>
                <label>Asfixia</label>
            </value>
            <value>
                <fullName>82</fullName>
                <label>Efecto de la electricidad</label>
            </value>
            <value>
                <fullName>83</fullName>
                <label>Efecto nocivo de la radiacion</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>Lesiones multiples</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>Otro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>