force-app/main/default/objects/Claim/recordTypes/Contingencia_AT.recordType-meta.xml
<RecordType>
    <fullName>Contingencia_AT</fullName>
    <active>true</active>
    <label>Contingencia AT</label>
</RecordType>