force-app/main/default/objects/Claim/recordTypes/CS_AT.recordType-meta.xml
<RecordType>
    <fullName>CS_AT</fullName>
    <active>true</active>
    <description>Accidente de Trabajo</description>
    <label>AT</label>
</RecordType>