force-app/main/default/objects/Claim/recordTypes/CS_ClaimCompensation.recordType-meta.xml
<RecordType>
    <fullName>CS_ClaimCompensation</fullName>
    <active>false</active>
    <description>Siniestros de seguros de vida</description>
    <label>Siniestro Indemnizaciones</label>
</RecordType>