force-app/main/default/objects/Claim/recordTypes/CS_EL.recordType-meta.xml
<RecordType>
    <fullName>CS_EL</fullName>
    <active>true</active>
    <description>Enfermedad Laboral</description>
    <label>EL</label>
</RecordType>