force-app/main/default/objects/Claim/recordTypes/CS_Monopoliza.recordType-meta.xml
<RecordType>
    <fullName>CS_Monopoliza</fullName>
    <active>true</active>
    <label>Monopoliza</label>
</RecordType>