force-app/main/default/objects/Claim/recordTypes/CS_Siniestro.recordType-meta.xml
<RecordType>
    <fullName>CS_Siniestro</fullName>
    <active>true</active>
    <description>Siniestros de seguros de vida</description>
    <label>Siniestro</label>
</RecordType>