force-app/main/default/objects/Claim/validationRules/GroundObjectionRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>GroundObjectionRequired</fullName>
    <active>true</active>
    <description>Cuando el estado pasa a Objetado se debe diligenciar el campo causal de Objeción</description>
    <errorConditionFormula>ISCHANGED( Status )  &amp;&amp;  ISPICKVAL( Status , &apos;Objetado&apos;)  &amp;&amp;  ISBLANK(TEXT( GroundObjection__c ))</errorConditionFormula>
    <errorDisplayField>GroundObjection__c</errorDisplayField>
    <errorMessage>Para pasar a Estado Objetado se debe diligenciar el campo Causal de Objeción</errorMessage>
</ValidationRule>