force-app/main/default/objects/Claim/validationRules/ReasonWaitingDocumentRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ReasonWaitingDocumentRequired</fullName>
    <active>true</active>
    <description>Cuando el estado pasa a Suspendido se debe diligenciar el campo motivo en espera de documento.</description>
    <errorConditionFormula>ISCHANGED( Status )  &amp;&amp;  ISPICKVAL(Status, &apos;Suspendido&apos;)  &amp;&amp;  ISBLANK( ReasonWaitingDocument__c )</errorConditionFormula>
    <errorDisplayField>ReasonWaitingDocument__c</errorDisplayField>
    <errorMessage>Para pasar a Estado Suspendido se debe diligenciar el campo Motivo espera documento</errorMessage>
</ValidationRule>