force-app/main/default/objects/Claim/listViews/All_Claims.listView-meta.xml
<ListView>
    <fullName>All_Claims</fullName>
    <filterScope>Everything</filterScope>
    <label>Todas las reclamaciones</label>
</ListView>