force-app/main/default/objects/Claim/listViews/Analista_Profesional_Claim.listView-meta.xml
<ListView>
    <fullName>Analista_Profesional_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Analista Profesional</label>
    <queue>Analista_Profesional</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>