force-app/main/default/objects/Claim/listViews/Coordinador_de_Indemnizaciones_Claim.listView-meta.xml
<ListView>
    <fullName>Coordinador_de_Indemnizaciones_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Coordinador de Indemnizaciones</label>
    <queue>Coordinador_de_Indemnizaciones</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>