force-app/main/default/objects/Claim/listViews/Gerente_de_Indemnizaciones_Claim.listView-meta.xml
<ListView>
    <fullName>Gerente_de_Indemnizaciones_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Gerente de Indemnizaciones</label>
    <queue>Gerente_de_Indemnizaciones</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>