force-app/main/default/objects/Claim/listViews/Pagador_Indemnizaciones_Claim.listView-meta.xml
<ListView>
    <fullName>Pagador_Indemnizaciones_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Pagador Indemnizaciones</label>
    <queue>Pagador_Indemnizaciones</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>