force-app/main/default/objects/Claim/listViews/Presidente_Colmena_Seguros_Claim.listView-meta.xml
<ListView>
    <fullName>Presidente_Colmena_Seguros_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Presidente Colmena Seguros</label>
    <queue>Presidente_Colmena_Seguros</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>