force-app/main/default/objects/Claim/listViews/Vicepresidente_Tecnico_Claim.listView-meta.xml
<ListView>
    <fullName>Vicepresidente_Tecnico_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Vicepresidente Técnico</label>
    <queue>Vicepresidente_Tecnico</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>